移除不必要的类